# openHas

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  pyproject.toml
docs/designs/: p0-completion-and-mcp.md  recall-pipeline.md
docs/error-experience/: summary.md
docs/good-experience/: summary.md
docs/guides/: engineering-workflow.md
docs/memory/: long-term.md  user-patterns.md
evals/: archive_easy.jsonl  autorecall.py  dead_ends.jsonl  enrich_cache.json  expansion_cache.json  experiment_log.tsv  failures.jsonl  gen_rerank_data.py  hard_cases.jsonl  proactive_cases.jsonl  proactive_eval.py  program.md  recall_eval.py  rerank_train.jsonl  run_experiment.sh  train_reranker.py
src/adapters/: __init__.py  bge_embed.py  cross_encoder_rerank.py  embeddings.py  llama_classify.py  llama_decompose.py  llama_embed.py  llama_enrich.py  llama_expand.py  llama_gap_check.py  llama_hyde.py  llama_predict.py  llama_rerank.py  llama_rewrite.py  sqlite_store.py  sqlite_vec_store.py
src/core/: __init__.py  auth.py  consolidation.py  ingestion.py  memory.py  prediction.py  proactive.py  scoring.py
src/domain_types/: __init__.py  auth.py  memory.py  ports.py  proactive.py  result.py
src/entrypoints/: cli.py
tests/adapters/: test_llama_classify.py  test_llama_hyde.py  test_sqlite_vec_store.py
tests/core/: test_auth.py  test_consolidation.py  test_ingestion.py  test_memory.py  test_prediction.py  test_proactive.py  test_scoring.py
