[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "openhas"
version = "0.1.1"
description = "Memory system with graph representation and predictive recall"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "sqlite-vec>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "basedpyright>=1.20",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
]
eval = [
    "httpx>=0.27",
    "numpy>=1.26",
    "huggingface-hub>=0.20",
]

[project.scripts]
openhas = "entrypoints.cli:main"

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
line-length = 99
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "C90", "PLR"]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.pylint]
max-args = 4
max-returns = 3
max-statements = 15

[tool.ruff.lint.isort]
known-first-party = ["domain_types", "core", "adapters", "entrypoints"]

# ── Basedpyright ──────────────────────────────────────
[tool.basedpyright]
typeCheckingMode = "strict"
pythonVersion = "3.11"
include = ["src"]

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires llama-server and sqlite-vec installed"]
